--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +13,7 @@
 </head>
 
 <header>
-    
+
     <h1 class="nombre">Geronimo Benavides</h1>
 
     <br>
@@ -21,6 +21,7 @@
     <p>En esta pagina vamos a hablar poco sobre Geronimo Benavides <br> mas conocido como el Momo.</p>
     <br>
     <div class="red">
+
         <a href="https://www.instagram.com/gero.momo/"> <img class="sociales" src="instagram.svg" alt=""> </a>
         <a href="https://www.youtube.com/@MoMoLaDinastia"> <img class="sociales" src="youtube.svg" alt=""> </a>
         <a href="https://www.twitch.tv/momoladinastia"><img class="sociales" src="twitch.svg" alt=""> </a>
@@ -93,6 +94,20 @@
         frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         allowfullscreen></iframe>
+
+    <br>
+    <h2 class="titulo">Boxeo</h2>
+    <br>
+    <p class="texto">Momo fue invitado a participar en la velada del año 2, Su contricante fue otro youtuber llamado Viruzz que hace el
+        mismo contenido que el Momo.
+        Momo fue el perdedor, pero la pelea fue bastante interesante.
+    </p>
+
+    <br>
+
+
+    <img src="momo-vs-viruzz_w416.png" alt="200px">
+
 
 </body>
 
