--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <a href=""> <b>Imagenes</b> </a>
         <a href=""> <b>biografía</b></a>
         <a href=""> <b>Videos</b></a>
+        <a href=""> <b>Boxeo</b></a>
     </nav>
 
 
@@ -98,7 +99,8 @@
     <br>
     <h2 class="titulo">Boxeo</h2>
     <br>
-    <p class="texto">Momo fue invitado a participar en la velada del año 2, Su contricante fue otro youtuber llamado Viruzz que hace el
+    <p class="texto">Momo fue invitado a participar en la velada del año 2, Su contricante fue otro youtuber llamado
+        Viruzz que hace el
         mismo contenido que el Momo.
         Momo fue el perdedor, pero la pelea fue bastante interesante.
     </p>
