--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <br>
 
-    <p>En esta pagina vamos a hablar poco sobre Geronimo Benavides <br> mas conocido como el Momo.</p>
+    <p>En esta pagina vamos a hablar  sobre Geronimo Benavides <br> mas conocido como el Momo.</p>
     <br>
     <div class="red">
 
@@ -42,6 +42,7 @@
         <a href=""> <b>biografía</b></a>
         <a href=""> <b>Videos</b></a>
         <a href=""> <b>Boxeo</b></a>
+        <a href=""> <b>Mundial</b> </a>
     </nav>
 
 
@@ -102,7 +103,7 @@
     <p class="texto">Momo fue invitado a participar en la velada del año 2, Su contricante fue otro youtuber llamado
         Viruzz que hace el
         mismo contenido que el Momo.
-        Momo fue el perdedor, pero la pelea fue bastante interesante.
+       <br> Momo fue el perdedor, pero la pelea fue bastante interesante.
     </p>
 
     <br>
@@ -110,7 +111,15 @@
 
     <img src="momo-vs-viruzz_w416.png" alt="200px">
 
+    <br>
 
+    <h2 class="titulo">Mundial</h2>
+    <br>
+    <p class="texto">Momo Benavides no podrá ser la voz del estadio para la Selección Argentina en el cruce ante Croacia, por las semifinales del Mundial de Qatar 2022, <br> Luego de que la FIFA decidiera finalizar el contrato que habían acordado y que le había permitido vivir los encuentros desde el borde del campo de juego. <br> El último fue ante Países Bajos, donde se generó mucha polémica. 
+
+    </p>
+    <br>
+    <img src="momo_862x485.webp" alt="">
 </body>
 
 </html>
