--- a/index.html
+++ b/index.html
@@ -115,6 +115,8 @@
 
     <h2 class="titulo">Mundial</h2>
     <br>
+    <p class="texto">Pelea entre la organizacion y el Momo</p>
+    <br>
     <p class="texto">Momo Benavides no podrá ser la voz del estadio para la Selección Argentina en el cruce ante Croacia,  por las semifinales del Mundial de Qatar 2022, <br> Luego de que la FIFA decidiera finalizar el contrato que habían acordado y que le había permitido vivir los encuentros desde el borde del campo de juego. <br> El último fue ante Países Bajos, donde se generó mucha polémica. 
 
     </p>
