--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <a href=""> <b>Imagenes</b> </a>
         <a href=""> <b>biografía</b></a>
         <a href=""> <b>Videos</b></a>
-        <a href=""> <b>Boxeo</b></a>
+        <a href=""> <b>Velada II</b></a>
         <a href=""> <b>Mundial</b> </a>
     </nav>
 
@@ -98,11 +98,12 @@
         allowfullscreen></iframe>
 
     <br>
-    <h2 class="titulo">Boxeo</h2>
+    <h2 class="titulo">Velada del año II</h2>
     <br>
-    <p class="texto">Momo fue invitado a participar en la velada del año 2, Su contricante fue otro youtuber llamado
+    <p class="texto">Momo fue invitado a participar en la velada del año 2. <p> Su contricante fue otro youtuber llamado
         Viruzz que hace el
-        mismo contenido que el Momo.
+        mismo contenido que el Momo.</p>
+
        <br> Momo fue el perdedor, pero la pelea fue bastante interesante.
     </p>
 
@@ -117,7 +118,9 @@
     <br>
     <p class="texto">Pelea entre la organizacion y el Momo</p>
     <br>
-    <p class="texto">Momo Benavides no podrá ser la voz del estadio para la Selección Argentina en el cruce ante Croacia,  por las semifinales del Mundial de Qatar 2022, <br> Luego de que la FIFA decidiera finalizar el contrato que habían acordado y que le había permitido vivir los encuentros desde el borde del campo de juego. <br> El último fue ante Países Bajos, donde se generó mucha polémica. 
+    <p class="texto">Momo Benavides no podrá ser la voz del estadio para la Selección Argentina en el cruce ante Croacia 
+        por las semifinales del Mundial de Qatar 2022, <br> luego de que la FIFA decidiera finalizar el contrato que habían acordado y que le había permitido vivir los encuentros desde el borde del campo de juego.
+         <br> El último fue ante Países Bajos, donde se generó mucha polémica. 
 
     </p>
     <br>
