--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <br>
 
-    <p>En esta pagina vamos a hablar  sobre Geronimo Benavides <br> mas conocido como el Momo.</p>
+    <p>En esta pagina vamos a hablar sobre Geronimo Benavides <br> mas conocido como el Momo.</p>
     <br>
     <div class="red">
 
@@ -43,6 +43,9 @@
         <a href=""> <b>Videos</b></a>
         <a href=""> <b>Velada II</b></a>
         <a href=""> <b>Mundial</b> </a>
+        <a href=""> <b>Polémicas</b></a>
+
+
     </nav>
 
 
@@ -53,7 +56,6 @@
         argentino. <br> Cuenta con más de 1.000.000 de suscriptores en su canal de YouTube y 1.000.000 de seguidores en
         su canal de Twitch.</p>
     <br>
-
 
 
 
@@ -100,17 +102,18 @@
     <br>
     <h2 class="titulo">Velada del año II</h2>
     <br>
-    <p class="texto">Momo fue invitado a participar en la velada del año 2. <p> Su contricante fue otro youtuber llamado
+    <p class="texto">Momo fue invitado a participar en la velada del año 2.
+    <p> Su contricante fue otro youtuber llamado
         Viruzz que hace el
         mismo contenido que el Momo.</p>
 
-       <br> Momo fue el perdedor, pero la pelea fue bastante interesante.
+    <br> Momo fue el perdedor, pero la pelea fue bastante interesante.
     </p>
 
     <br>
 
 
-    <img src="momo-vs-viruzz_w416.png" alt="200px">
+    <img src="momo-vs-viruzz_w416.png" alt="100px">
 
     <br>
 
@@ -118,13 +121,28 @@
     <br>
     <p class="texto">Pelea entre la organizacion y el Momo</p>
     <br>
-    <p class="texto">Momo Benavides no podrá ser la voz del estadio para la Selección Argentina en el cruce ante Croacia 
-        por las semifinales del Mundial de Qatar 2022, <br> luego de que la FIFA decidiera finalizar el contrato que habían acordado y que le había permitido vivir los encuentros desde el borde del campo de juego.
-         <br> El último fue ante Países Bajos, donde se generó mucha polémica. 
+    <p class="texto">Momo Benavides no podrá ser la voz del estadio para la Selección Argentina en el cruce ante Croacia
+        por las semifinales del Mundial de Qatar 2022, <br> luego de que la FIFA decidiera finalizar el contrato que
+        habían acordado y que le había permitido vivir los encuentros desde el borde del campo de juego.
+        <br> El último fue ante Países Bajos, donde se generó mucha polémica.
 
     </p>
     <br>
-    <img src="momo_862x485.webp" alt="">
+    <img class="imagenes" src="momo_862x485.webp" alt="">
+
+    <br>
+
+    <h2 class="titulo">Polémicas</h2>
+    <br>
+    <p class="texto"> Baneo masivo de usuario </p>
+    <br>
+    <p class="texto"> Momo es conocido por banear a muchos usuarios en mucho de sus directos (mayormente usuarios que lo joden siempre) debido a eso momo se termina enojando y les dice te vas baneado por pelotud.
+         <p> Gracias a eso surgieron memes como por ejemplo cuando baneo a un usuario llamado Lcasta07 el cual termino siendo un meme en la comunidad hablahispana</p></p>
+
+        <footer>
+            <br>
+            <br>
+        </footer>
 </body>
 
 </html>
