--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <p class="texto"> Baneo masivo de usuario </p>
     <br>
     <p class="texto"> Momo es conocido por banear a muchos usuarios en mucho de sus directos (mayormente usuarios que lo joden siempre) debido a eso momo se termina enojando y les dice te vas baneado por pelotud.
-         <p> Gracias a eso surgieron memes como por ejemplo cuando baneo a un usuario llamado Lcasta07 el cual termino siendo un meme en la comunidad hablahispana</p></p>
+         <p> Gracias a eso surgieron memes como por ejemplo cuando baneo a un usuario llamado Lcasta07 el cual termino siendo un meme en la comunidad hablahispana.</p></p>
 
         <footer>
             <br>
