agrega la clase imagenes

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
     <h2 class="titulo">Polémicas</h2>
     <br>
-    <p class="texto"> Baneo masivo de usuario </p>
+    <p class="texto"> Baneo masivo de usuarios </p>
     <br>
     <p class="texto"> Momo es conocido por banear a muchos usuarios en mucho de sus directos (mayormente usuarios que lo joden siempre) debido a eso momo se termina enojando y les dice te vas baneado por pelotud.
          <p> Gracias a eso surgieron memes como por ejemplo cuando baneo a un usuario llamado Lcasta07 el cual termino siendo un meme en la comunidad hablahispana.</p></p>
