--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina del Momo</title>
+    <title>Página del Momo</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="carita.webp">
 
@@ -18,7 +18,7 @@
 
     <br>
 
-    <p>En esta pagina vamos a hablar sobre Geronimo Benavides <br> mas conocido como el Momo.</p>
+    <p>En esta página vamos a hablar sobre Geronimo Benavides <br> más conocido como el Momo.</p>
     <br>
     <div class="red">
 
@@ -38,7 +38,7 @@
     <br>
 
     <nav>
-        <a href=""> <b>Imagenes</b> </a>
+        <a href=""> <b>Imágenes</b> </a>
         <a href=""> <b>biografía</b></a>
         <a href=""> <b>Videos</b></a>
         <a href=""> <b>Velada II</b></a>
@@ -79,7 +79,7 @@
         años empezo a trabajar en diferentes rubros. Cuando termino el secundario,
         momo estudio un año en psicologia y derecho, en mismo tiempo en la Universidad de La Plata.</p>
     <br>
-    <h2 class="titulo">Imagenes</h2>
+    <h2 class="titulo">Imágenes</h2>
     <br>
     <div class="cont-img">
 
