--- a/index.html
+++ b/index.html
@@ -138,6 +138,10 @@
     <br>
     <p class="texto"> Momo es conocido por banear a muchos usuarios en mucho de sus directos (mayormente usuarios que lo joden siempre) debido a eso momo se termina enojando y les dice te vas baneado por pelotud.
          <p> Gracias a eso surgieron memes como por ejemplo cuando baneo a un usuario llamado Lcasta07 el cual termino siendo un meme en la comunidad hablahispana.</p></p>
+        <br>
+         <img class="imagenes" src="zyro-image.png" alt="">
+
+
 
         <footer>
             <br>
