cambie el icono

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página del Momo</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" href="carita.webp">
+    <link rel="shortcut icon" href="biceps.avif">
 
 </head>
 
