linkeado parte paginas

--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
     <br>
 
     <nav>
-        <a href=""> <b>Imágenes</b> </a>
-        <a href=""> <b>biografía</b></a>
-        <a href=""> <b>Videos</b></a>
-        <a href=""> <b>Velada II</b></a>
-        <a href=""> <b>Mundial</b> </a>
-        <a href=""> <b>Polémicas</b></a>
+        <a href="#Imágenes"> <b>Imágenes</b> </a>
+        <a href="#Biografía"> <b>Biografía</b></a>
+        <a href="#Videos"> <b>Videos</b></a>
+        <a href="#VeladaII"> <b>Velada II</b></a>
+        <a href="#Mundial"> <b>Mundial</b> </a>
+        <a href="#Polémicas"> <b>Polémicas</b></a>
 
 
     </nav>
@@ -66,7 +66,7 @@
 
     <br>
 
-    <h2 class="titulo">Biografía</h2>
+    <h2 id="Biografía" class="titulo">Biografía</h2>
 
     <br>
 
@@ -79,7 +79,7 @@
         años empezo a trabajar en diferentes rubros. Cuando termino el secundario,
         momo estudio un año en psicologia y derecho, en mismo tiempo en la Universidad de La Plata.</p>
     <br>
-    <h2 class="titulo">Imágenes</h2>
+    <h2 id="Imágenes" class="titulo">Imágenes</h2>
     <br>
     <div class="cont-img">
 
@@ -90,7 +90,7 @@
     <br>
 
 
-    <h2 class="titulo">Videos</h2>
+    <h2 id="Videos" class="titulo">Videos</h2>
     <br>
     <p>En este Video podemos ver como Momo baila cerca de la Torre Eiffel.</p>
     <br>
@@ -100,7 +100,7 @@
         allowfullscreen></iframe>
 
     <br>
-    <h2 class="titulo">Velada del año II</h2>
+    <h2 id="VeladaII" class="titulo">Velada del año II</h2>
     <br>
     <p class="texto">Momo fue invitado a participar en la velada del año 2.
     <p> Su contricante fue otro youtuber llamado
@@ -117,7 +117,7 @@
 
     <br>
 
-    <h2 class="titulo">Mundial</h2>
+    <h2 id="Mundial" class="titulo">Mundial</h2>
     <br>
     <p class="texto">Pelea entre la organizacion y el Momo</p>
     <br>
@@ -132,21 +132,24 @@
 
     <br>
 
-    <h2 class="titulo">Polémicas</h2>
+    <h2 id="Polémicas" class="titulo">Polémicas</h2>
     <br>
     <p class="texto"> Baneo masivo de usuarios </p>
     <br>
-    <p class="texto"> Momo es conocido por banear a muchos usuarios en mucho de sus directos (mayormente usuarios que lo joden siempre) debido a eso momo se termina enojando y les dice te vas baneado por pelotud.
-         <p> Gracias a eso surgieron memes como por ejemplo cuando baneo a un usuario llamado Lcasta07 el cual termino siendo un meme en la comunidad hablahispana.</p></p>
+    <p class="texto"> Momo es conocido por banear a muchos usuarios en mucho de sus directos (mayormente usuarios que lo
+        joden siempre) debido a eso momo se termina enojando y les dice te vas baneado por pelotud.
+    <p> Gracias a eso surgieron memes como por ejemplo cuando baneo a un usuario llamado Lcasta07 el cual termino siendo
+        un meme en la comunidad hablahispana.</p>
+    </p>
+    <br>
+    <img class="imagenes" src="zyro-image.png" alt="">
+
+
+
+    <footer>
         <br>
-         <img class="imagenes" src="zyro-image.png" alt="">
-
-
-
-        <footer>
-            <br>
-            <br>
-        </footer>
+        <br>
+    </footer>
 </body>
 
 </html>
