--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <br>
 
-    <p class="texto">Momo nació en Tolosa en 1989 en la casa de sus abuelos. De chico soñaba con ser futbolista.
+    <p class="texto">Momo nació en Tolosa en 1989 en la casa de sus abuelos. <br> De chico soñaba con ser futbolista.
         Dedicaba todas sus
         horas libres a jugar a la pelota en el club del barrio donde se crió. <br>A pesar de estudiar en la misma
         escuela
@@ -137,16 +137,19 @@
     <p class="texto"> Baneo masivo de usuarios </p>
     <br>
     <p class="texto"> Momo es conocido por banear a muchos usuarios en mucho de sus directos (mayormente usuarios que lo
-        joden siempre) debido a eso momo se termina enojando y les dice te vas baneado por pelotud.
-    <p> Gracias a eso surgieron memes como por ejemplo cuando baneo a un usuario llamado Lcasta07 el cual termino siendo
-        un meme en la comunidad hablahispana.</p>
+        joden siempre) debido a eso momo se termina enojando y les dice te vas baneado por pelotud. <br>
+    Gracias a eso surgieron memes como por ejemplo cuando baneo a un usuario llamado Lcasta07, <br> el cual termino siendo
+        un meme en la comunidad hablahispana.</>
     </p>
     <br>
     <img class="imagenes" src="zyro-image.png" alt="">
 
 
-
     <footer>
+        <br>
+        <br>
+
+        <p>Desarrollada por Cristóbal Maier </p>
         <br>
         <br>
     </footer>
